--- a/SpMedical/package.json
+++ b/SpMedical/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-gesture-handler": "^2.1.0",
